Fix 'Umbrello crashed when generating C# code' in CSharpWriter::makeLocalTypeName().

This commit contains a fix for the same case in ValaWriter::makeLocalTypeName().

FIXED-IN:2.17.1 (KDE Applications 15.08.1)
BUG:232528