umbrello/codegenerators/vala/valawriter.cpp
@@ -823,13 +823,14 @@ void ValaWriter::writeAttribute(const QString& doc,
  */
 QString ValaWriter::makeLocalTypeName(UMLClassifierListItem *cl)
 {
-    UMLPackage *p = cl->getType()->umlPackage();
-    if (m_seenIncludes.indexOf(p) != -1) {
-        return cl->getType()->name();
+    UMLClassifier *c = cl->getType();
+    if (c) {
+        UMLPackage *p = c->umlPackage();
+        if (m_seenIncludes.indexOf(p) != -1) {
+            return c->name();
+        }
     }
-    else {
-        return cl->getTypeName();
-    }
+    return cl->getTypeName();
 }
 
 /**
